--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:id="@+id/ttRoundText"
         android:layout_width="91dp"
         android:layout_height="38dp"
+        android:fontFamily="@font/tradewinds"
         android:text="Round:"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -29,6 +30,7 @@
         android:id="@+id/ttBreakText"
         android:layout_width="103dp"
         android:layout_height="40dp"
+        android:fontFamily="@font/tradewinds"
         android:text="Break:"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -43,27 +45,29 @@
 
     <TextView
         android:id="@+id/ttRounds"
-        android:layout_width="104dp"
-        android:layout_height="67dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/tradewinds"
         android:text=""
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="42sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintHorizontal_bias="0.871"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.929" />
+        app:layout_constraintVertical_bias="0.923" />
 
     <TextView
         android:id="@+id/ttRound"
-        android:layout_width="90dp"
-        android:layout_height="66dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/tradewinds"
         android:text=""
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="42sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.133"
@@ -73,12 +77,13 @@
 
     <TextView
         android:id="@+id/ttBreak"
-        android:layout_width="106dp"
-        android:layout_height="66dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/tradewinds"
         android:text=""
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="42sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
@@ -90,6 +95,7 @@
         android:id="@+id/ttRoundsText"
         android:layout_width="106dp"
         android:layout_height="40dp"
+        android:fontFamily="@font/tradewinds"
         android:text="Rounds:"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -106,6 +112,7 @@
         android:id="@+id/ttCountdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/tradewinds"
         android:text="00:00"
         android:textColor="#FFFFFF"
         android:textSize="75sp"
@@ -150,6 +157,7 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:ems="10"
+        android:fontFamily="@font/tradewinds"
         android:hint="Round"
         android:inputType="number"
         android:textAlignment="center"
@@ -168,6 +176,7 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:ems="10"
+        android:fontFamily="@font/tradewinds"
         android:hint="Break"
         android:inputType="number"
         android:textAlignment="center"
@@ -186,6 +195,7 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:ems="10"
+        android:fontFamily="@font/tradewinds"
         android:hint="Rounds"
         android:inputType="number"
         android:textAlignment="center"
@@ -215,24 +225,27 @@
 
     <TextView
         android:id="@+id/ttCurrentRound"
-        android:layout_width="153dp"
-        android:layout_height="40dp"
+        android:layout_width="156dp"
+        android:layout_height="66dp"
+        android:fontFamily="@font/tradewinds"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintVertical_bias="0.481" />
 
     <TextView
         android:id="@+id/ttFight"
-        android:layout_width="219dp"
-        android:layout_height="76dp"
+        android:layout_width="229dp"
+        android:layout_height="90dp"
+        android:fontFamily="@font/tradewinds"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="36sp"
+        android:textSize="64sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -243,6 +256,7 @@
         android:id="@+id/ttGetReady"
         android:layout_width="283dp"
         android:layout_height="353dp"
+        android:fontFamily="@font/tradewinds"
         android:text=""
         android:textAlignment="center"
         android:textColor="#FFFFFF"
